# openfda-scraper

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  setup.sh
migrations/: 20250201135009_create_ndc_product.sql  20250201135009_create_ndc_tables.sql
src/: database.rs  main.rs
src/api/: ndc.rs
src/models/: ndc.rs
