[package]
name = "openfda-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
